added "name" to the input. Otherwise you couldn't enter any values for Phone, Fax, and url. Also moved span inside the div.

--- a/Purchasing.Web/Views/Order/_VendorDialog.cshtml
+++ b/Purchasing.Web/Views/Order/_VendorDialog.cshtml
@@ -81,30 +81,34 @@
                     <div class="editor-label">
                         Phone: @*<span class="required">*</span>*@</div>
                     <div class="editor-field">
-                        <input id="vendor-phone" type="text" placeholder="(555) 555-5555" maxlength="15"/></div>
-                    <span class="field-validation-valid" data-valmsg-for="vendorPhone" data-valmsg-replace="true"></span>
+                        <input id="vendor-phone" type="text" name="vendorPhone" placeholder="(555) 555-5555" maxlength="15"/>
+                        <span class="field-validation-valid" data-valmsg-for="vendorPhone" data-valmsg-replace="true"></span>
+                    </div>
                 </li>
                 <li>
                     <div class="editor-label">
                         Fax:
                     </div>
                     <div class="editor-field">
-                        <input id="vendor-fax" type="text" placeholder="(555) 555-5555" maxlength="15"/></div>
-                    <span class="field-validation-valid" data-valmsg-for="vendorFax" data-valmsg-replace="true"></span>
+                        <input id="vendor-fax" type="text" name="vendorFax" placeholder="(555) 555-5555" maxlength="15"/>
+                        <span class="field-validation-valid" data-valmsg-for="vendorFax" data-valmsg-replace="true"></span>
+                    </div>
                 </li>
                 <li>
                     <div class="editor-label">
                         Email: @*<span class="required">*</span>*@</div>
                     <div class="editor-field">
-                        <input id="vendor-email" type="email" placeholder="Vendor Email" data-val="true" data-val-email="Email address format not valid" data-val-length="Vendor Email can be up to 50 characters" data-val-length-max="50" maxlength="50"/></div>
-                    <span class="field-validation-valid" data-valmsg-for="vendorEmail" data-valmsg-replace="true"></span>
+                        <input id="vendor-email" type="email" name="vendorEmail" placeholder="Vendor Email" data-val="true" data-val-email="Email address format not valid" data-val-length="Vendor Email can be up to 50 characters" data-val-length-max="50" maxlength="50"/>
+                        <span class="field-validation-valid" data-valmsg-for="vendorEmail" data-valmsg-replace="true"></span>
+                    </div>
                 </li>
                 <li>
                     <div class="editor-label">
                         Url: @*<span class="required">*</span>*@</div>
                     <div class="editor-field">
-                        <input id="vendor-url" type="text" placeholder="Vendor Url" maxlength="128"/></div>
-                    <span class="field-validation-valid" data-valmsg-for="vendorUrl" data-valmsg-replace="true"></span>
+                        <input id="vendor-url" type="text" name="vendorUrl" placeholder="Vendor Url" maxlength="128"/>
+                        <span class="field-validation-valid" data-valmsg-for="vendorUrl" data-valmsg-replace="true"></span>
+                    </div>
                 </li>
             </ul>
             </fieldset>
