Added DA Dept admin to drop down

--- a/Purchasing.Web/Views/Training/Setup.cshtml
+++ b/Purchasing.Web/Views/Training/Setup.cshtml
@@ -15,6 +15,7 @@
                   <option value="AP">Approver</option>
                   <option value="AM">Account Manager</option>
                   <option value="PR">Purchaser</option>
+                  <option value="DA">Dept Admin</option>
               </select>
     </ul>
     
