changed back to handling

--- a/Purchasing.Web/Views/Order/_LineItems.cshtml
+++ b/Purchasing.Web/Views/Order/_LineItems.cshtml
@@ -141,10 +141,10 @@
                 <tr class="item-footer">
                     <td colspan="2" style="text-align: left;"><span data-bind="visible: !showForSplit('Order')" id="line-item-help-display"><a href="#" title="Click here to learn all about line splits" id="help-lineitems" data-tourid="lineitemsplit-intro" class="ui-icon ui-icon-help tour-help"></a>&nbsp; <em>About line splits</em></span></td>
                     <td colspan="3" style="text-align: right;">
-                        Estimated Freight:
+                        Estimated Handling:
                     </td>
                     <td>
-                        <span><input data-bind="value: freight, valueUpdate: 'afterkeydown'" id="freight" name="freight" type="text" autocomplete="off" value="$@Model.Order.FreightAmount" title="Freight costs are taxable"/></span>
+                        <span><input data-bind="value: freight, valueUpdate: 'afterkeydown'" id="freight" name="freight" type="text" autocomplete="off" value="$@Model.Order.FreightAmount" title="Handling costs are taxable"/></span>
                     </td>
                     <td></td>
                 </tr>
