--- a/Purchasing.Web/Views/Order/_LineItems.cshtml
+++ b/Purchasing.Web/Views/Order/_LineItems.cshtml
@@ -131,20 +131,20 @@
                 <tr class="item-footer">
                     <td colspan="2" class="lineitemsplit"><a data-bind="click: cancelLineSplit, visible: showForSplit('Line')" href="#" id="cancel-split-by-line" class="biggify" style="display:none;"><span class="biggify">x</span> Cancel Split By Line</a><a data-bind="click: splitByLine, visible: showForSplit('None')" href="#" id="split-by-line" class="biggify"><span class="biggify">/</span> Split By Line</a></td>
                     <td colspan="3" style="text-align: right;">
-                        Estimated Shipping Amount:
+                        Estimated Freight:
                     </td>
                     <td>
-                        <span><input data-bind="value: shipping, valueUpdate: 'afterkeydown'" id="shipping" name="shipping" type="text" autocomplete="off" value="$@Model.Order.ShippingAmount" title="Shipping costs are not taxable"/></span>
+                        <span><input data-bind="value: shipping, valueUpdate: 'afterkeydown'" id="shipping" name="shipping" type="text" autocomplete="off" value="$@Model.Order.ShippingAmount" title="Freight costs are not taxable"/></span>
                     </td>
                     <td></td>
                 </tr>                    
                 <tr class="item-footer">
                     <td colspan="2" style="text-align: left;"><span data-bind="visible: !showForSplit('Order')" id="line-item-help-display"><a href="#" title="Click here to learn all about line splits" id="help-lineitems" data-tourid="lineitemsplit-intro" class="ui-icon ui-icon-help tour-help"></a>&nbsp; <em>About line splits</em></span></td>
                     <td colspan="3" style="text-align: right;">
-                        Estimated Handling:
+                        Estimated Shipping & Handling:
                     </td>
                     <td>
-                        <span><input data-bind="value: freight, valueUpdate: 'afterkeydown'" id="freight" name="freight" type="text" autocomplete="off" value="$@Model.Order.FreightAmount" title="Handling costs are taxable"/></span>
+                        <span><input data-bind="value: freight, valueUpdate: 'afterkeydown'" id="freight" name="freight" type="text" autocomplete="off" value="$@Model.Order.FreightAmount" title="Shipping & Handling costs are taxable"/></span>
                     </td>
                     <td></td>
                 </tr>
