Order page swaps shipping for freight wrt taxable

--- a/Purchasing.Web/Views/Order/_LineItems.cshtml
+++ b/Purchasing.Web/Views/Order/_LineItems.cshtml
@@ -134,7 +134,7 @@
                         Estimated Freight:
                     </td>
                     <td>
-                        <span><input data-bind="value: shipping, valueUpdate: 'afterkeydown'" id="shipping" name="shipping" type="text" autocomplete="off" value="$@Model.Order.ShippingAmount" title="Freight costs are not taxable"/></span>
+                        <span><input data-bind="value: freight, valueUpdate: 'afterkeydown'" id="freight" name="freight" type="text" autocomplete="off" value="$@Model.Order.FreightAmount" title="Freight costs are not taxable"/></span>
                     </td>
                     <td></td>
                 </tr>                    
@@ -144,7 +144,7 @@
                         Estimated Shipping & Handling:
                     </td>
                     <td>
-                        <span><input data-bind="value: freight, valueUpdate: 'afterkeydown'" id="freight" name="freight" type="text" autocomplete="off" value="$@Model.Order.FreightAmount" title="Shipping & Handling costs are taxable"/></span>
+                        <span><input data-bind="value: shipping, valueUpdate: 'afterkeydown'" id="shipping" name="shipping" type="text" autocomplete="off" value="$@Model.Order.ShippingAmount" title="Shipping & Handling costs are taxable"/></span>
                     </td>
                     <td></td>
                 </tr>
