Changed the label on the Order Review page, in the pdf report, changed the labels and moved freight before shipping and handling.

--- a/Purchasing.Web/Views/Order/_ReviewLineItems.cshtml
+++ b/Purchasing.Web/Views/Order/_ReviewLineItems.cshtml
@@ -120,7 +120,7 @@
                 </tr>
                 <tr class="item-footer">
                     <td colspan="4">&nbsp;</td>
-                    <td class="label row-total-label">Estimated Shipping:</td>
+                    <td class="label row-total-label">Estimated Shipping & Handling:</td>
                     <td class="row-total-value">@Model.Order.ShippingAmount.ToString("c")</td>            
                 </tr>
                 <tr class="item-footer">
