added code for getting user perms on home/index page

--- a/Purchasing.Web/Views/Home/Index.cshtml
+++ b/Purchasing.Web/Views/Home/Index.cshtml
@@ -1,6 +1,9 @@
 ﻿@using System.Web.Configuration
+@using Purchasing.Web.Services
 @{
     Layout = null;
+
+    var roles = UserSecurityService.UserRoles(User.Identity.Name);
 } 
 
 <!DOCTYPE html>
