All vOrderHistory fields are being indexed
also returning direct orderhistory objects

--- a/Purchasing.Web/Views/Home/ViewHistory.cshtml
+++ b/Purchasing.Web/Views/Home/ViewHistory.cshtml
@@ -1,4 +1,4 @@
-﻿@model System.Collections.Generic.List<Purchasing.Web.Services.OrderHistoryDto>
+﻿@model System.Collections.Generic.List<Purchasing.Core.Queries.OrderHistory>
 
 @{
     ViewBag.Title = "Your Order History";
