--- a/Purchasing.Web/Views/System/Indexes.cshtml
+++ b/Purchasing.Web/Views/System/Indexes.cshtml
@@ -1,30 +1,39 @@
-﻿@model System.Collections.Generic.Dictionary<string,System.DateTime>
+﻿@model Dictionary<string,DateTime>
 
 @{
-    ViewBag.Title = "Index Modification Info";
-    Layout = null;
+	ViewBag.Title = "Index Modification Info";
+}
+
+@section SubNav
+{
+	<ul class='navigation'>
+		<li><span class="button">@Html.ActionLink("System Center", "Index")</span></li>
+	</ul>
 }
 
 <h2>Index Modification Info</h2>
 
 <table>
-    <thead>
-        <tr>
-            <th>Name</th>
-            <th>Last Modified</th>
-            <th>ReCreate Index</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>Order History</td>
-            <td>@Model["OrderHistory"]</td>
-            <td>@Html.ActionLink("Overwrite Index", "Overwrite", new { index = "OrderHistory"})</td>
-        </tr>
-        <tr>
-            <td>Access</td>
-            <td>@Model["Access"]</td>
-            <td>@Html.ActionLink("Overwrite Index", "Overwrite", new { index = "Access"})</td>
-        </tr>
-    </tbody>
+	<thead>
+		<tr>
+			<th>Name</th>
+			<th>Last Modified</th>
+			<th>Number of Records</th>
+			<th>ReCreate Index</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td>Order History</td>
+			<td>@ViewBag.ModifiedDates["OrderHistory"]</td>
+			<td>@ViewBag.NumRecords["OrderHistory"]</td>
+			<td>@Html.ActionLink("Overwrite Index", "Overwrite", new { index = "OrderHistory"})</td>
+		</tr>
+		<tr>
+			<td>Access</td>
+			<td>@ViewBag.ModifiedDates["Access"]</td>
+			<td>@ViewBag.NumRecords["Access"]</td>
+			<td>@Html.ActionLink("Overwrite Index", "Overwrite", new { index = "Access"})</td>
+		</tr>
+	</tbody>
 </table>
