Admin orders now can use lucene indexes
order service has AdminOrders via lucene method

--- a/Purchasing.Web/Views/History/AdminOrders.cshtml
+++ b/Purchasing.Web/Views/History/AdminOrders.cshtml
@@ -13,8 +13,15 @@
 
 @section SubNav
 {
-    <span id="refreshMessage" title="@ViewBag.LastRefreshTitle" class="showTip">
+    <span id="refreshMessage" title="@ViewBag.LastRefreshTitle" class="showTip" style="position: relative; top: -20px; font-style: italic;">
+    @if (ViewBag.IndexLastModified == null)
+    {
         @ViewBag.LastRefresh 
+    }
+    else
+    {
+        <span>Results current as of @ViewBag.IndexLastModified</span>
+    }
     </span>
 	<ul class='navigation'>
         <li><a href="#" id="filterToggle" class="button selected">Filters</a>
