--- a/Purchasing.Web/Views/History/AdminOrders.cshtml
+++ b/Purchasing.Web/Views/History/AdminOrders.cshtml
@@ -5,8 +5,8 @@
     ViewBag.SingleColumn = false;
     ViewBag.GetMethod = "AdminOrders";
     ViewBag.LoadFixedHeaders = true;
-    ViewBag.LastRefreshTitle = string.Format("The data on this page is current as of {0}. Press F5 to refresh.", DateTime.Now.ToString("dddd h:mm:ss tt"));
-    ViewBag.LastRefresh = string.Format("Last Refreshed {0}", DateTime.Now.ToString("dddd h:mm:ss tt"));
+    ViewBag.LastRefreshTitle = string.Format("The data on this page is current as of {0}-- recent changes make take up to five minutes to process. Press F5 to refresh.", @ViewBag.IndexLastModified.ToString("dddd h:mm:ss tt"));
+    ViewBag.LastRefresh = string.Format("Results current as of {0}", @ViewBag.IndexLastModified.ToString("dddd h:mm:ss tt"));
     
     Bundles.Reference("Scripts/public/single/FixedHeader.js");
 }
@@ -14,14 +14,7 @@
 @section SubNav
 {
     <span id="refreshMessage" title="@ViewBag.LastRefreshTitle" class="showTip" style="position: relative; top: -20px; font-style: italic;">
-    @if (ViewBag.IndexLastModified == null)
-    {
         @ViewBag.LastRefresh 
-    }
-    else
-    {
-        <span>Results current as of @ViewBag.IndexLastModified</span>
-    }
     </span>
 	<ul class='navigation'>
         <li><a href="#" id="filterToggle" class="button selected">Filters</a>
