--- a/Purchasing.Web/Views/History/Index.cshtml
+++ b/Purchasing.Web/Views/History/Index.cshtml
@@ -11,8 +11,8 @@
     ViewBag.GetMethod = "Index";
     ViewBag.LoadTableTools = true;
     ViewBag.LoadFixedHeaders = true;
-    ViewBag.LastRefreshTitle = string.Format("The data on this page is current as of {0}. Press F5 to refresh.", DateTime.Now.ToString("dddd h:mm:ss tt"));
-    ViewBag.LastRefresh = string.Format("Last Refreshed {0}", DateTime.Now.ToString("dddd h:mm:ss tt"));
+    ViewBag.LastRefreshTitle = string.Format("The data on this page is current as of {0}-- recent changes make take up to five minutes to process. Press F5 to refresh.", @ViewBag.IndexLastModified.ToString("dddd h:mm:ss tt"));
+    ViewBag.LastRefresh = string.Format("Results current as of {0}", @ViewBag.IndexLastModified.ToString("dddd h:mm:ss tt"));
     
     Bundles.Reference("scripts/public/single/TableTools.js");
     Bundles.Reference("scripts/public/single/ZeroClipboard.js");
@@ -24,14 +24,7 @@
 @section SubNav
 {
     <span id="refreshMessage" title="@ViewBag.LastRefreshTitle" class="showTip" style="position: relative; top: -20px; font-style: italic;">
-    @if (ViewBag.IndexLastModified == null)
-    {
         @ViewBag.LastRefresh 
-    }
-    else
-    {
-        <span>Results current as of @ViewBag.IndexLastModified</span>
-    }
     </span>
 	<ul class='navigation'>
         @*<li>@Html.ActionLink("Create New", "Create")</li>*@
