created historyajax controller for ajax methods
they can't be in the history controller any more since we need session
state in the history controller, but not in the ajax one.  Eventuall we
should move the notimplementedexception old methods out of the history
controller

--- a/Purchasing.Web/Views/Home/Landing.cshtml
+++ b/Purchasing.Web/Views/Home/Landing.cshtml
@@ -18,9 +18,9 @@
     $(function () {
         purchasing.options({
             OrdersBaseUrl: '@Url.Action("Index", "History")',
-            RecentActivityUrl: '@Url.Action("RecentActivity", "History")',
-            RecentlyCompletedUrl: '@Url.Action("RecentlyCompleted", "History")',
-            RecentComments: '@Url.Action("RecentComments", "History")'
+            RecentActivityUrl: '@Url.Action("RecentActivity", "HistoryAjax")',
+            RecentlyCompletedUrl: '@Url.Action("RecentlyCompleted", "HistoryAjax")',
+            RecentComments: '@Url.Action("RecentComments", "HistoryAjax")'
         });
         
         purchasing.init();
