--- a/Purchasing.Web/Views/DepartmentalAdminRequest/Index.cshtml
+++ b/Purchasing.Web/Views/DepartmentalAdminRequest/Index.cshtml
@@ -6,6 +6,14 @@
 
 }
 
+@section SubNav
+{
+    <ul class="navigation">
+        <li>@Html.ActionLink("Show All", "Index", "DepartmentalAdminRequest", new { filter = "showAll" }, new { @class = "button" })</li> 
+        <li>@Html.ActionLink("Only Show Complete", "Index", "DepartmentalAdminRequest", new { filter = "onlyShowComplete" }, new {  @class = "button" })</li>
+        <li>@Html.ActionLink("Only Show Pending", "Index", "DepartmentalAdminRequest", new { }, new {  @class = "button" })</li>
+    </ul>
+}
 
 
 
@@ -22,6 +30,7 @@
             <th>SSC</th>
             <th>Orgs</th>
             <th>Requests</th>
+            <th>Completed</th>
             <th></th>
         </tr>
     </thead>
@@ -72,6 +81,10 @@
                 </td>
                 <td>
                     @item.RequestCount
+                </td>
+                
+                <td>
+                    @item.Complete
                 </td>
 
                 <td>
