Fixed a validation check. Added link to profile page and profile menu

--- a/Purchasing.Web/Views/Shared/_Layout.cshtml
+++ b/Purchasing.Web/Views/Shared/_Layout.cshtml
@@ -90,6 +90,7 @@
                         <ul>
                             <li>@Html.ActionLink("Email Preferences", "EmailPreferences", "User", new { id = User.Identity.Name }, new { })</li>
                             <li>@Html.ActionLink("Column Preferences", "ColumnPreferences", "User", new { id = User.Identity.Name }, new { })</li>
+                            <li>@Html.ActionLink("Email Address", "EditEmail", "User", new {}, new { })</li>
                             <li>@Html.ActionLink("Away Status", "AwayStatus", "User")</li>
                         </ul>    
                     </li> 
