--- a/Purchasing.Web/Views/User/Profile.cshtml
+++ b/Purchasing.Web/Views/User/Profile.cshtml
@@ -16,6 +16,7 @@
         <ul>
             <li>@Html.ActionLink("Update Email Preferences", "EmailPreferences", "User", new { id = Model.Id }, null)</li>            
             <li>@Html.ActionLink("Update Column Preferences", "ColumnPreferences", "User", new { id = Model.Id }, null)</li>
+            <li>@Html.ActionLink("Change your Email", "EditEmail", "User", new {}, null)</li>
             <li>@Html.ActionLink("Set Away Status", "AwayStatus", "User", new { id = Model.Id }, null)</li>
         </ul>
     </div>
