back to profile link

--- a/Purchasing.Web/Views/User/EditEmail.cshtml
+++ b/Purchasing.Web/Views/User/EditEmail.cshtml
@@ -9,9 +9,9 @@
 
 @section SubNav
 {
-	<ul class="navigation">
-		<li>@Html.ActionLink("Back to List", "Index")</li>
-	</ul>
+    <ul class="navigation">
+        <li>@Html.ActionLink("Back to Profile", "Profile", "", new {@class="button"})</li>
+    </ul>
 }
 
 @using (Html.BeginForm()) {
