made the Attachment Category field a little bigger

--- a/Purchasing.Web/Css/custom.css
+++ b/Purchasing.Web/Css/custom.css
@@ -333,3 +333,7 @@ body .ui-tooltip-default .ui-tooltip-content { background-color: #FFF; border:2p
 
 
 /* reports */
+
+
+/* Attachment Category */
+.qq-upload-file-category {width: 300px}
