--- a/Purchasing.Web/Views/Workgroup/_WorkgroupForm.cshtml
+++ b/Purchasing.Web/Views/Workgroup/_WorkgroupForm.cshtml
@@ -1,77 +1,6 @@
 ﻿@using Purchasing.Web.Models
 @model WorkgroupModifyModel
-<li>
-    <div class="editor-label required">
-        @Html.LabelFor(model => model.Workgroup.Name)<span class"red">*</span>
-    </div>
-    <div class="editor-field">
-        @Html.EditorFor(model => model.Workgroup.Name)
-        @Html.ValidationMessageFor(model => model.Workgroup.Name)
-    </div>
-</li>
-<li>
-    <div class="editor-label">
-        @Html.LabelFor(model => model.Workgroup.Disclaimer)
-    </div>
-    <div class="editor-field">
-        @Html.EditorFor(model => model.Workgroup.Disclaimer)
-        @Html.ValidationMessageFor(model => model.Workgroup.Disclaimer)
-    </div>
-</li>
-<li>
-    <div class="editor-label">
-        @Html.LabelFor(model => model.Workgroup.Administrative)
-    </div>
-    <div class="editor-field">
-        @Html.EditorFor(model => model.Workgroup.Administrative)
-        @Html.ValidationMessageFor(model => model.Workgroup.Administrative)
-    </div>
-</li>
-<li>
-    <div class="editor-label">
-        @Html.LabelFor(model => model.Workgroup.IsFullFeatured)
-    </div>
-    <div class="editor-field">
-        @Html.EditorFor(model => model.Workgroup.IsFullFeatured)
-        @Html.ValidationMessageFor(model => model.Workgroup.IsFullFeatured)
-    </div>
-</li>
-<li>
-    <div class="editor-label">
-        @Html.LabelFor(model => model.Workgroup.SyncAccounts)
-    </div>
-    <div class="editor-field">
-        @Html.EditorFor(model => model.Workgroup.SyncAccounts)
-        @Html.ValidationMessageFor(model => model.Workgroup.SyncAccounts)
-    </div>
-</li>
-<li>
-    <div class="editor-label">
-        @Html.LabelFor(model => model.Workgroup.ForceAccountApprover)
-    </div>
-    <div class="editor-field">
-        @Html.EditorFor(model => model.Workgroup.ForceAccountApprover)
-        @Html.ValidationMessageFor(model => model.Workgroup.ForceAccountApprover)
-    </div>
-</li>
-<li>
-    <div class="editor-label">
-        @Html.LabelFor(model => model.Workgroup.AllowControlledSubstances)
-    </div>
-    <div class="editor-field">
-        @Html.EditorFor(model => model.Workgroup.AllowControlledSubstances)
-        @Html.ValidationMessageFor(model => model.Workgroup.AllowControlledSubstances)
-    </div>
-</li>
-<li>
-    <div class="editor-label">
-        @Html.LabelFor(model => model.Workgroup.NotificationEmailList)
-    </div>
-    <div class="editor-field">
-        @Html.EditorFor(model => model.Workgroup.NotificationEmailList)
-        @Html.ValidationMessageFor(model => model.Workgroup.NotificationEmailList)
-    </div>
-</li>
+@Html.Partial("_CommonWorkgroupForm")
 <li>
     <div class="editor-label">
         @Html.LabelFor(model => model.Workgroup.IsActive)
